improve handling of large uploads